Fixing button + not centered correctly

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -55,6 +55,10 @@ h1 {
   border-bottom: 1px solid #F1F1F1;
 }
 
+.but {
+  margin: auto;
+}
+
 .item:last-child {
   border-bottom: 0;
 }
